<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArgGISStudy</string>
    <string name="action_settings">Settings</string>
    <string name="error">Error</string>
    <string name="check_connect">Please check internet connection.</string>
    <string name="ok">OK</string>
    <string name="network">Network</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="street">Street</string>
    <string name="satellite">Satellite</string>
    <string name="current_location">Current location</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
            
</resources>
