<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.esri.android.map.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>    

    <Button
        android:id="@+id/satelite_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:text="@string/satellite" />

    <Button
        android:id="@+id/street_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_toLeftOf="@id/satelite_btn"
        android:text="@string/street" />

    <Button
        android:id="@+id/current_location"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:text="@string/current_location" />

    <Button
        android:id="@+id/zoom_out"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/zoom_out" />

    <Button
        android:id="@+id/zoom_in"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@id/zoom_out"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:text="@string/zoom_in" />
</RelativeLayout>